# ComfyUI-Spectrum-WAN-Proper

./: .gitignore  LICENSE  README.md  nodes.py  pyproject.toml
comfyui_spectrum_wan/: __init__.py  config.py  forecast.py  handlers.py  runtime.py  wan.py
tests/: smoke_bias_shift_transition.py  smoke_runtime.py  test_forecast.py  test_runtime_debug_logging.py  test_smoke_bias_shift_transition.py  test_wan_runtime_resolution.py
