[project]
name = "comfyui-spectrum-wan-proper"
version = "0.1.8"
description = "Native ComfyUI WAN Spectrum forecaster nodes"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/xmarre/ComfyUI-Spectrum-WAN-Proper"
Documentation = "https://github.com/xmarre/ComfyUI-Spectrum-WAN-Proper/wiki"
"Bug Tracker" = "https://github.com/xmarre/ComfyUI-Spectrum-WAN-Proper/issues"

[tool.comfy]
PublisherId = "xmarre"
DisplayName = "ComfyUI-Spectrum-WAN-Proper"
Icon = ""
includes = []
